--- a/geral/gas.html
+++ b/geral/gas.html
@@ -107,7 +107,8 @@
                         <li><a class="dropdown-item dropdown-itemRefresh" value="300000">5 minutos</a></li>
                         <li><a class="dropdown-item dropdown-itemRefresh" value="600000">10 minutos</a></li>
                         <li><a class="dropdown-item dropdown-itemRefresh" value="1800000">30 minutos</a></li>
-                        <li><a class="dropdown-item dropdown-itemRefresh" id="desativarFiltro" value="null">Desativar</a></li>
+                        <li><a class="dropdown-item dropdown-itemRefresh" id="desativarFiltro"
+                                value="null">Desativar</a></li>
                     </ul>
                 </div>
             </form>
