novo branch com o codigo depositado na maquina virtual

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -129,8 +129,8 @@
                                 <label for="validationTooltip03" class="form-label fw-bold">Estado</label>
                                 <select class="form-select" id="form_estado" aria-label="Default select example">
                                     <option selected disabled>Estado da Torre</option>
-                                    <option value="1">Ativada</option>
-                                    <option value="0">Desativada</option>
+                                    <option value="1">Ativa</option>
+                                    <option value="0">Desativa</option>
                                 </select>
                             </div>
                             <div class="col-md-6 position-relative">
@@ -220,8 +220,8 @@
                                 <label for="validationTooltip03" class="form-label fw-bold">Estado</label>
                                 <select class="form-select" id="form_estadoEdit" aria-label="Default select example">
                                     <option selected disabled>Estado da Torre</option>
-                                    <option value="1">Ativada</option>
-                                    <option value="0">Desativada</option>
+                                    <option value="1">Ativa</option>
+                                    <option value="0">Desativa</option>
                                 </select>
                             </div>
                             <div class="col-md-6 position-relative">
