--- a/errorPage/error_page.html
+++ b/errorPage/error_page.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Error Page</title>
-  <link rel="stylesheet" href="/meteo/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
 </head>
 <style>
   .error-404 {
