--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <title>Iot Dashboard</title>
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/meteo/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/meteo/css/index.css">
-    <link rel="stylesheet" href="/meteo/css/barraOpt.css">
-    <link rel="stylesheet" href="/meteo/css/rodape.css">
-    <link rel="stylesheet" href="/meteo/css/defaultTorres.css">
-    <link rel="stylesheet" href="/meteo/menu/menu.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/barraOpt.css">
+    <link rel="stylesheet" href="./css/rodape.css">
+    <link rel="stylesheet" href="./css/defaultTorres.css">
+    <link rel="stylesheet" href="./menu/menu.css">
 
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="/meteo/bootstrap/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="/meteo/menu/menu.js" defer></script>
-    <script type="module" src="/meteo/index.js" defer></script>
-    <script type="module" src="/meteo/menu/menuFunction.js" defer></script>
-    <script type="module" src="/meteo/menu/ActualPage.js" defer></script>
+    <script type="text/javascript" src="./bootstrap/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="./menu/menu.js" defer></script>
+    <script type="module" src="./index.js" defer></script>
+    <script type="module" src="./menu/menuFunction.js" defer></script>
+    <script type="module" src="./menu/ActualPage.js" defer></script>
 </head>
 
 <body>
@@ -104,23 +104,17 @@
             </form>
         </div>
         <div class="preload"><img src="/meteo/icons/loading-slow-net.gif" id="gif" hidden></div>
-        <div class="conteudo" id="conteudo">
+        <div class="conteudo" id="conteudo" hidden>
             <div class="col-lg-12" id="NodataHidden" hidden>
                 <div class="card">
                     <div class="card-body">
-                        <div class="d-flex justify-content-center border-bottom text-center">
-                            <h4 class="card-title" id="TitulovariavelNoData"></h4>
-                        </div>
                         <h2 id="mensagem" class="AlertNodata"></h2>
                         <p id="mensagem2" class="text-center"></p>
                     </div>
                 </div>
             </div>
-            <div id="restoconteudo" style="margin-top: -20px;">
-
-            </div>
         </div>
-
+        <div id="restoconteudo"></div>
     </main>
     <footer id="rodape" class="rodape">
         <div class="sobre">
